--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@vee-validate/yup": "^4.13.1",
+    "axios": "^1.7.2",
     "maska": "^3.0.0-beta2",
     "postcss-apply": "^0.12.0",
     "swiper": "^11.1.3",
