--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "maska": "^3.0.0-beta2",
     "postcss-apply": "^0.12.0",
     "swiper": "^11.1.3",
+    "v-calendar": "^3.1.2",
     "vee-validate": "^4.13.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.13.1",
